# math3d

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  matrix.cpp  vector.cpp
include/math3d/: core.cuh  core.h  lu.hpp  math3d.hpp  matn.hpp  opflags.h  quaternion.hpp  utils.h  vecn.hpp
src/: opflags.cpp  utils.cpp
tests/: CMakeLists.txt  test_lu.cpp  test_math3d.cpp  test_matn.cpp  test_quaternion.cpp  test_vecn.cpp
